testing/errors/macrotwice.a
	!macro dings {
	}
	!macro dings {	; -> "Macro already defined."
	}
